--- a/index.html
+++ b/index.html
@@ -4,42 +4,40 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+          integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
 
     <title>Thijs Dortmann</title>
 </head>
 <body>
 
-<div class="container d-flex h-100">
-    <div class="row justify-content-center align-self-center">
-        <div class="col-md-8">
-            <div class="card" id="content">
-                <div class="card-body">
-                    <div class="container" id="header">
-                        <div class="row">
-                            <div class="col-md-3 col-sm-12 my-auto" id="profilePicture">
-                                <img src="assets/img/face.png">
-                            </div>
-                            <div class="col-md-9 col-sm-12 my-auto" id="headline">
-                                <h1>I'm Thijs Dortmann.</h1>
-                                <p class="lead">
-                                    BSc Creative Technology graduate with a passion for full-stack development and system administraton.
-                                </p>
-                            </div>
+<div id="main">
+    <div class="container d-flex h-100">
+        <div class="row justify-content-center align-self-center">
+            <div class="col-lg-10 col-xl-8 col-12">
+                <div class="card" id="content">
+                    <div class="row">
+                        <div class="col-md-5 col-12 my-auto" id="profilePicture">
+                            <img src="assets/img/face.jpg" alt="Thijs Dortmann" class="img-fluid">
                         </div>
-                    </div>
+                        <div class="col-md-7 col-12 my-auto" id="headline">
+                            <h1><span class="d-none d-xl-inline">I'm </span>Thijs Dortmann<span class="d-none d-xl-inline">.</span></h1>
+                            <p class="lead">
+                                BSc Creative Technology graduate with experience in full-stack development and
+                                system administration.
+                            </p>
 
-                    <hr>
-
-                    <div class="row text-center" id="contact">
-                        <div class="col-12">
-                            <h3>Contact me</h3>
-                            <a class="btn btn-primary btn-lg" href="https://www.linkedin.com/in/thijsdortmann/" target="_blank"><i class="fab fa-linkedin"></i> LinkedIn</a>
-                            <a class="btn btn-secondary btn-lg" href="https://github.com/thijsdortmann/" target="_blank"><i class="fab fa-github"></i> GitHub</a>
-                            <a class="btn btn-success btn-lg" href="mailto:thijs@thzd.nl"><i class="fas fa-envelope-open"></i> E-mail</a>
+                            <a class="btn btn-primary btn-lg" href="https://www.linkedin.com/in/thijsdortmann/"
+                               target="_blank"><i class="fab fa-linkedin"></i> <span class="d-none d-xl-inline">LinkedIn</span></a>
+                            <a class="btn btn-secondary btn-lg" href="https://github.com/thijsdortmann/"
+                               target="_blank"><i class="fab fa-github"></i> <span class="d-none d-xl-inline">GitHub</span></a>
+                            <a class="btn btn-success btn-lg" href="mailto:thijs@thzd.nl"><i
+                                    class="fas fa-envelope-open"></i> <span class="d-none d-xl-inline">E-mail</span></a>
                         </div>
                     </div>
                 </div>
@@ -48,11 +46,30 @@
     </div>
 </div>
 
+<div class="area">
+    <ul class="circles">
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+    </ul>
+</div>
 
-
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
 
 </body>
 </html>
