--- a/index.html
+++ b/index.html
@@ -27,11 +27,10 @@
                         </div>
 
                         <div class="col-md-7 col-12 my-auto" id="headline">
-                            <h1><span class="d-none d-xl-inline">I'm </span>Thijs Dortmann<span
-                                    class="d-none d-xl-inline">.</span></h1>
+                            <h3>Hi there!</h3>
+                            <h1>I'm Thijs Dortmann</h1>
                             <p class="lead">
-                                BSc Creative Technology graduate with experience in full-stack development and
-                                system administration.
+                                A creative full-stack developer with a background in User Experience
                             </p>
 
                             <a class="btn btn-primary btn-lg" href="https://www.linkedin.com/in/thijsdortmann/"
